<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">Android2_Lesson1_HW1_Perizat53</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task">New Task</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="et_profile">Profile</string>
    <string name="to_do_list">To-do list!</string>
    <string name="here_you_can_write_down_something_important_or_make_a_schedule_for_tomorrow">Here you can write down something important or make a schedule for tomorrow:)</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="sort">Sort</string>
    <string name="send">Send</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="confirm">Confirm</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="_996">+996</string>
    <string name="tv_resend_code">tv_resend_code</string>
    <string name="resend_code">Resend code</string>
    <string name="_00_00_00">00.00.00</string>


</resources>